bugfix: add proper z-index for navbar

--- a/src/blocks/modules/header/_header.scss
+++ b/src/blocks/modules/header/_header.scss
@@ -19,7 +19,7 @@
   height: 48px;
   text-decoration: none;
   margin-inline: auto;
-  z-index: 10;
+  z-index: 101;
 
   @media (min-width: $lg) {
     margin-inline: 0;
@@ -69,7 +69,7 @@
 
 .menu-toggle {
   position: relative;
-  z-index: 10;
+  z-index: 101;
   width: 25px;
   height: 18px;
   margin-left: -25px;
@@ -161,7 +161,9 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 2;
+  right: 0;
+  bottom: 0;
+  z-index: 100;
   display: none;
   flex-direction: column;
   width: 100%;
